AX: accessibilityIsIgnored should avoid computing textUnderElement https://bugs.webkit.org/show_bug.cgi?id=104688

Reviewed by Chris Fleizach.

Simplify the logic in accessibilityIsIgnored without affecting
the results of any tests. In particular, avoid expensive calls to
textUnderElement.

Covered by existing tests.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::isGenericFocusableElement):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::accessibilityIsIgnored):


Canonical link: https://commits.webkit.org/122971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137416 268f45cc-cd09-0410-ab3c-d52691b4dbfc